Fix high contrast dropnav btn

--- a/light.css
+++ b/light.css
@@ -422,8 +422,9 @@ nav ul li {
 }
 
 nav ul li a {
-    padding: 15px 15px 15px 0;
     display: inline-block;
+    padding: 15px 15px 15px 0;
+    color: #424242;
 }
 
 
@@ -468,7 +469,7 @@ nav ul li a {
     position: relative;
     height: 1px;
     width: 20px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
     vertical-align: super;
 }
 
@@ -479,7 +480,7 @@ nav ul li a {
     position: absolute;
     height: 1px;
     width: 20px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
 }
 
 .dropnav-button:after {
@@ -489,7 +490,7 @@ nav ul li a {
     position: absolute;
     height: 1px;
     width: 20px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
 }
 
 
@@ -529,6 +530,7 @@ nav ul li.brand {
 nav ul li a[class*="btn"] {
     margin: 10px 0;
     padding: 4px 12px;
+    border: 1px solid rgba(0, 0, 0, .4);
 }
 
 
